Korjattu Vimeo kohtaan vimeon url

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a class="linkit linkit1" href="https://github.com/Mixerboy24" target="_blank">Github</a>
   </div>
   <div class="linkit linkit1">
-    <a class="linkit linkit1" href="https://github.com/Mixerboy24" target="_blank">Vimeo</a>
+    <a class="linkit linkit1" href="https://vimeo.com/mixerboy24" target="_blank">Vimeo</a>
   </div>
 
   <div class="somet">
